# python-ft-deps

./: README.md  __main__.py  pyproject.toml
python_ft_deps/: check_deps.py
